      (Toby Corkindale, Alexis Sukrieh)
    * Fix broken test with old version of HTTP::Parser::XS
      (Franck Cuny)
    * #492 - Don't run Test::TCP tests on win32
      (Franck Cuny)
    * Fix a bug that when forwarding a post with post data stalled the
      code (read on no data handle).  (Alberto Simões)
    * Tweak tests regular expression to be more flexible (Pedro Melo)

    [ ENHANCEMENTS ]
    * Fix for issue #516
      https://github.com/sukria/Dancer/issues/516
      No more legacy code in Dancer::Route to handle routes created 
      with the deprecated keyword "r". The related code is now more 
      concise and should be slightly more efficient.
      (Alexis Sukrieh)
    * Merge PR #541
      https://github.com/sukria/Dancer/pull/541
      New "param" accessor to retrieve a parameter easily.
      (Alberto Simões)
    * Implement session directory testing cache for Session::YAML
      (Damien Krotkine)
    * Tests rework (improve speed, remove useless tests, ...)
      (Alberto Simões and Franck Cuny)
    * Configuration for log_dir and log_file.
      (Alberto Simões)
    * Pass vars to templates automatically (David Precious)
    * Support lexical prefix (Pedro Melo)

1.3059_02   29.05.2011

    [ BUG FIXES ]
    * Fix for smoker failure under Perl 5.13.4
      http://www.cpantesters.org/cpan/report/b37416b8-88df-11e0-9c74-cad5bcb8094c
      Better use of Time::Hires in t/22_hooks/04_template.t
      (Franck Cuny)

1.3059_01   27.05.2011

    [ API CHANGES ]
    * Second level of deprecation for render_with_layout method.
      (Alberto Simões)
    * Second level of deprecation for mime_type method.
      (Alberto Simões)

    [ BUG FIXES ]
    * Dancer::Test was broken for tests using data in POST (GH#534)
      (Franck Cuny)
    * Multiple setter implemented at 1.3039_01 was broken for App
      specific settings.
      (Alberto Simões)

    [ ENHANCEMENTS ]
    * Cookie accessor to manipulate cookies directly.
      (Niko)
