@@ -7,9 +7,9 @@ use Test::More import => ['!pass'];
 use Dancer::ModuleLoader;
 use LWP::UserAgent;
 
-plan skip_all => "skip test with Test::TCP in win32" if ( $^O eq 'MSWin32' );
+plan skip_all => "skip test with Test::TCP in win32" if $^O eq 'MSWin32';
 plan skip_all => "Test::TCP is needed for this test"
-    unless Dancer::ModuleLoader->load("Test::TCP");
+    unless Dancer::ModuleLoader->load("Test::TCP" => '1.13');
 
 plan tests => 4;
 
@@ -17,7 +17,7 @@ Test::TCP::test_tcp(
     client => sub {
         my $port = shift;
         my $res;
-    
+
         $res = _get_http_response(GET => '/string', $port);
         is d($res->content), "\x{1A9}", "utf8 static response";
 
@@ -26,7 +26,7 @@ Test::TCP::test_tcp(
 
         $res = _get_http_response(GET => "/param/".u("\x{1A9}"), $port);
         is d($res->content), "\x{1A9}", "utf8 route param";
-        
+
         $res = _get_http_response(GET => "/view?string1=".u("\x{E9}"), $port);
         is d($res->content), "sigma: 'Ʃ'\npure_token: 'Ʃ'\nparam_token: '\x{E9}'\n",
             "params and tokens are valid unicode";
@@ -37,12 +37,12 @@ Test::TCP::test_tcp(
         use Dancer;
         use t::lib::TestAppUnicode;
 
-        setting charset      => 'utf8';
-        setting port         => $port;
-        set     show_errors  => 1;
-        setting startup_info => 0;
-        set     'log'        => 'debug';
-        set     logger       => 'console';
+        set( charset      => 'utf8',
+             port         => $port,
+             show_errors  => 1,
+             startup_info => 0,
+             log          => 'debug',
+             logger       => 'console');
 
         Dancer->dance();
     },
@@ -58,7 +58,7 @@ sub d {
 
 sub _get_http_response {
     my ($method, $path, $port) = @_;
-    
+
     my $ua = LWP::UserAgent->new;
     my $req = HTTP::Request->new($method => "http://127.0.0.1:$port${path}");
     return $ua->request($req);
