@@ -7,9 +7,9 @@ use Dancer::ModuleLoader;
 use File::Spec;
 use lib File::Spec->catdir( 't', 'lib' );
 
-plan skip_all => "skip test with Test::TCP in win32" if ( $^O eq 'MSWin32' );
+plan skip_all => "skip test with Test::TCP in win32" if $^O eq 'MSWin32';
 plan skip_all => "Test::TCP is needed for this test"
-    unless Dancer::ModuleLoader->load("Test::TCP");
+    unless Dancer::ModuleLoader->load("Test::TCP" => "1.13");
 
 use LWP::UserAgent;
 
@@ -18,9 +18,9 @@ Test::TCP::test_tcp(
     client => sub {
         my $port = shift;
         my $ua = LWP::UserAgent->new;
-        my $res = $ua->post("http://127.0.0.1:$port/params/route?a=1&var=query", {var =>
-        'post', b => 2});
-        
+        my $res = $ua->post("http://127.0.0.1:$port/params/route?a=1&var=query",
+                            {var => 'post', b => 2});
+
         ok $res->is_success, 'req is success';
         my $content = $res->content;
         my $VAR1;
@@ -28,7 +28,7 @@ Test::TCP::test_tcp(
 
         my $expected = {
                 params => {
-                    a => 1, b => 2, 
+                    a => 1, b => 2,
                     var => 'post',
                 },
                 body => {
@@ -51,9 +51,9 @@ Test::TCP::test_tcp(
         use TestApp;
         Dancer::Config->load;
 
-        setting environment  => 'production';
-        setting port         => $port;
-        setting startup_info => 0;
+        set ( environment  => 'production',
+              port         => $port,
+              startup_info => 0);
         Dancer->dance();
     },
 );
