@@ -2,9 +2,9 @@ use Test::More import => ['!pass'];
 use strict;
 use warnings;
 
-plan skip_all => "skip test with Test::TCP in win32" if ( $^O eq 'MSWin32' );
+plan skip_all => "skip test with Test::TCP in win32" if $^O eq 'MSWin32';
 plan skip_all => 'Test::TCP is needed to run this test'
-    unless Dancer::ModuleLoader->load('Test::TCP');
+    unless Dancer::ModuleLoader->load('Test::TCP' => "1.13");
 plan tests => 8;
 
 use LWP::UserAgent;
@@ -29,8 +29,8 @@ Test::TCP::test_tcp(
     server => sub {
         my $port = shift;
         use Dancer;
-        setting port         => $port;
-        setting startup_info => 0;
+        set (port         => $port,
+             startup_info => 0);
 
         get '/req' => sub {
             request->is_ajax ? return 1 : return 0;
