@@ -4,9 +4,9 @@ use Test::More import => ['!pass'];
 
 BEGIN {
     use Dancer::ModuleLoader;
-    plan skip_all => "skip test with Test::TCP in win32" if ( $^O eq 'MSWin32' );
+    plan skip_all => "skip test with Test::TCP in win32" if $^O eq 'MSWin32';
     plan skip_all => "TEST::TCP is needed to run this test"
-      unless Dancer::ModuleLoader->load('Test::TCP');
+      unless Dancer::ModuleLoader->load('Test::TCP' => "1.13");
     plan skip_all => "Plack is needed to run this test"
       unless Dancer::ModuleLoader->load('Plack::Builder');
 }
