@@ -5,9 +5,9 @@ use Test::More import => ['!pass'];
 BEGIN {
     use Dancer::ModuleLoader;
 
-    plan skip_all => "skip test with Test::TCP in win32" if ( $^O eq 'MSWin32' );
+    plan skip_all => "skip test with Test::TCP in win32" if $^O eq 'MSWin32';
     plan skip_all => 'Test::TCP is needed to run this test'
-        unless Dancer::ModuleLoader->load('Test::TCP');
+        unless Dancer::ModuleLoader->load('Test::TCP' => "1.13");
 };
 
 use LWP::UserAgent;
@@ -27,7 +27,7 @@ Test::TCP::test_tcp(
             $ua->cookie_jar({ file => "$tempdir/.cookies.txt" });
 
             my $res = $ua->get("http://127.0.0.1:$port/cookies");
-            like $res->content, qr/\$VAR1 = \{\}/, 
+            like $res->content, qr/\$VAR1 = \{\}/,
             "no cookies found for the client $client";
 
             $res = $ua->get("http://127.0.0.1:$port/set_cookie/$client/42");
@@ -35,8 +35,8 @@ Test::TCP::test_tcp(
             ok($res->is_success, "set_cookie for client $client");
 
             $res = $ua->get("http://127.0.0.1:$port/cookies");
-            like $res->content, qr/'name' => '$client'/, 
-            "cookie looks good for client $client"; 
+            like $res->content, qr/'name' => '$client'/,
+            "cookie looks good for client $client";
         }
 
         File::Temp::cleanup();
@@ -49,9 +49,9 @@ Test::TCP::test_tcp(
         use TestApp;
         Dancer::Config->load;
 
-        setting startup_info => 0;
-        setting environment => 'production';
-        setting port => $port;
+        set( startup_info => 0,
+             environment  => 'production',
+             port         => $port );
         Dancer->dance();
     },
 );
