@@ -13,6 +13,7 @@
     * Fix a bug that when forwarding a post with post data stalled the
       code (read on no data handle).  (Alberto Simões)
     * Tweak tests regular expression to be more flexible (Pedro Melo)
+    * Require a recent Test::TCP (1.13) to run tests. (Alberto Simões)
 
     [ ENHANCEMENTS ]
     * Fix for issue #516
